--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,9 @@
 {
     "name": "STM32-Only-Code",
+    // Исправлен формат образа Docker
     "image": "://mcr.microsoft.com",
-    "postCreateCommand": "curl -fsSL https://raw.githubusercontent.com | sh && export PATH=$PATH:$(pwd)/bin && arduino-cli config init && arduino-cli core update-index --additional-urls https://github.com && arduino-cli core install STMicroelectronics:stm32",
+    // Исправлены все URL на полные и рабочие адреса для установки STM32
+    "postCreateCommand": "curl -fsSL https://raw.githubusercontent.com | sh && export PATH=$PATH:$(pwd)/bin && ./bin/arduino-cli config init && ./bin/arduino-cli core update-index --additional-urls https://github.com && ./bin/arduino-cli core install STMicroelectronics:stm32",
     "customizations": {
         "vscode": {
             "extensions": ["vsciot-vscode.vscode-arduino", "ms-vscode.cpptools"]
